--- a/ansible/roles/consul-template/templates/consul-template.bsdinit.j2
+++ b/ansible/roles/consul-template/templates/consul-template.bsdinit.j2
@@ -1,49 +1,27 @@
 #!/bin/sh
 
-# PROVIDE: consul-template
+# PROVIDE: consul_template
 # REQUIRE: LOGIN
 # KEYWORD: shutdown
 
-# shellcheck disable=SC1091
 . /etc/rc.subr
 
-name="consul-template"
-# shellcheck disable=2034
-rcvar=$(set_rcvar)
-
+name="consul_template"
+rcvar=consul_template_enable
 
 load_rc_config $name
-# shellcheck disable=2154
-: "${consul_enable="NO"}"
-# shellcheck disable=2154
-: "${consul_users="consul"}"
+: "${consul_template_enable="NO"}"
+: "${consul_template_users="{{ consul_user }}"}"
 
-# shellcheck disable=2034
-restart_cmd=consul_template_restart
-# shellcheck disable=2034
-start_cmd=consul_template_start
-# shellcheck disable=2034
-stop_cmd=consul_template_stop
+consul_template_pidfile="/var/run/consul/consul-template.pid"
+command="{{ consul_template_bin_path }}/consul-template"
+command_args="-config={{ consul_template_templates_dir }} -pid-file={{ consul_template_pidfile }}"
+start_precmd="${name}_prestart"
 
-consul_template_start() {
-    echo "Starting ${name}."
-    for user in ${consul_users}; do
-        mkdir /var/run/consul
-        chown -R "{{ consul_user }}:{{ consul_group }}" /var/run/consul/
-        su -m "${user}" -c "{{ consul_template_bin_path }}/consul-template agent -config-file={{ consul_config_path }}/config.json -config-dir={{ consul_configd_path }} -pid-file=/var/run/consul/consul-template.pid&"
-    done
-}
-
-consul_template_stop() {
-    echo "Stopping $name."
-    pids=$(pgrep consul)
-    pkill consul-template
-    wait_for_pids "${pids}"
-}
-
-consul_template_restart() {
-    consul_template_stop
-    consul_template_start
+consul_template_prestart()
+{
+    mkdir /var/run/consul
+    chown -R "{{ consul_user }}:{{ consul_group }}" /var/run/consul/
 }
 
 run_rc_command "$1"
