Fix FreeBSD roles
--HG--
branch : feature/microservices

--- a/ansible/roles/consul-template/templates/consul-template.bsdinit.j2
+++ b/ansible/roles/consul-template/templates/consul-template.bsdinit.j2
@@ -15,7 +15,7 @@ load_rc_config $name
 
 consul_template_pidfile="/var/run/consul/consul-template.pid"
 command="{{ consul_template_bin_path }}/consul-template"
-command_args="-config={{ consul_template_templates_dir }} -pid-file={{ consul_template_pidfile }}"
+command_args="-config={{ consul_template_templates_dir }} -pid-file=${consul_template_pidfile}"
 start_precmd="${name}_prestart"
 
 consul_template_prestart()
