--- a/ansible/roles/pgbouncer/templates/pgbouncer_check.sh.j2
+++ b/ansible/roles/pgbouncer/templates/pgbouncer_check.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/sh
-isok=$(timeout 1 /usr/bin/psql --host 127.0.0.1 -qAt0 --port 6432 {{ noc_pg_db }} -c "select 'ok'")
+isok=$(timeout 1 {{ postgres_bin_dir }}/psql --host 127.0.0.1 -qAt0 --port 6432 {{ noc_pg_db }} -c "select 'ok'")
 if [ "$isok" = "ok" ]
 then
     exit 0
