newapp: PEP8 formatting
--HG--
branch : feature/microservices

--- a/templates/newapp/modelapplication/views.py.j2
+++ b/templates/newapp/modelapplication/views.py.j2
@@ -1,12 +1,12 @@
 # -*- coding: utf-8 -*-
-##----------------------------------------------------------------------
-## {{module}}.{{app}} application
-##----------------------------------------------------------------------
-## Copyright (C) 2007-{{year}} The NOC Project
-## See LICENSE for details
-##----------------------------------------------------------------------
+# ----------------------------------------------------------------------
+# {{module}}.{{app}} application
+# ----------------------------------------------------------------------
+# Copyright (C) 2007-{{year}} The NOC Project
+# See LICENSE for details
+# ----------------------------------------------------------------------
 
-## NOC modules
+# NOC modules
 from noc.lib.app import {{base_class}}, view
 from {{modelimport}} import {{model}}
 from noc.core.translation import ugettext as _
