introduce more influxdb settings
--HG--
branch : feature/microservices

--- a/ansible/roles/influxdb/templates/etc/influxdb/influxdb.conf.j2
+++ b/ansible/roles/influxdb/templates/etc/influxdb/influxdb.conf.j2
@@ -18,8 +18,8 @@ reporting-disabled = true
   wal-logging-enabled = true
   query-log-enabled = false
   cache-max-memory-size = {{influx_max_cache_memory}}
-  cache-snapshot-memory-size = 26214400
-  cache-snapshot-write-cold-duration = "0h05m0s"
+  cache-snapshot-memory-size = {{influx_cache_snapshot_memory_size}}
+  cache-snapshot-write-cold-duration = "0h30m0s"
   compact-full-write-cold-duration = "1h0m0s"
   max-points-per-block = 0
   data-logging-enabled = true
