do not monitor consul for now.
--HG--
branch : feature/microservices

--- a/ansible/roles/consul/templates/etc/telegraf/telegraf.d/consul.conf.j2
+++ b/ansible/roles/consul/templates/etc/telegraf/telegraf.d/consul.conf.j2
@@ -2,7 +2,7 @@
 pid_file = "{{ consul_pid_path }}"
 
 # will not work until https://github.com/influxdata/telegraf/issues/2422
-[[inputs.consul]]
-  address = "consul:8500"
-  token = "{{ consul_acl_master_token }}"
-  datacentre = "{{ consul_datacenter }}"
+#[[inputs.consul]]
+#  address = "consul:8500"
+#  token = "{{ consul_acl_master_token }}"
+#  datacentre = "{{ consul_datacenter }}"
