use proper interval for grouping. add ping attempts graph
--HG--
branch : feature/microservices

--- a/templates/ddash/graph_default.j2
+++ b/templates/ddash/graph_default.j2
@@ -22,7 +22,7 @@
         {
           "type": "time",
           "params": [
-            "$interval"
+            "$discovery_interval"
           ]
         },
         {
