--- a/templates/ddash/graph_interface_load.j2
+++ b/templates/ddash/graph_interface_load.j2
@@ -67,7 +67,7 @@
       "groupBy": [
         {
           "params": [
-            "$interval"
+            "$discovery_interval"
           ],
           "type": "time"
         },
@@ -116,7 +116,7 @@
       "groupBy": [
         {
           "params": [
-            "$interval"
+            "$discovery_interval"
           ],
           "type": "time"
         },
@@ -184,7 +184,7 @@
         {
           "type": "time",
           "params": [
-            "$interval"
+            "$discovery_interval"
           ]
         },
         {
@@ -234,7 +234,7 @@
         {
           "type": "time",
           "params": [
-            "$interval"
+            "$discovery_interval"
           ]
         },
         {
