--- a/templates/ddash/graph_interface_load_lag.j2
+++ b/templates/ddash/graph_interface_load_lag.j2
@@ -52,7 +52,7 @@
       "groupBy": [
         {
           "params": [
-            "$interval"
+            "$discovery_interval"
           ],
           "type": "time"
         },
@@ -101,7 +101,7 @@
       "groupBy": [
         {
           "params": [
-            "$interval"
+            "$discovery_interval"
           ],
           "type": "time"
         },
