--- a/templates/ddash/panel_errors.j2
+++ b/templates/ddash/panel_errors.j2
@@ -25,7 +25,7 @@
         {
           "type": "time",
           "params": [
-            "$interval"
+            "$discovery_interval"
           ]
         },
         {
@@ -81,7 +81,7 @@
         {
           "type": "time",
           "params": [
-            "$interval"
+            "$discovery_interval"
           ]
         },
         {
