--- a/templates/ddash/row_errors.j2
+++ b/templates/ddash/row_errors.j2
@@ -44,7 +44,7 @@
           "groupBy": [
             {
               "params": [
-                "$interval"
+                "$discovery_interval"
               ],
               "type": "time"
             },
@@ -100,7 +100,7 @@
           "groupBy": [
             {
               "params": [
-                "$interval"
+                "$discovery_interval"
               ],
               "type": "time"
             },
