--- a/templates/ddash/graph_cpu_load_5min.j2
+++ b/templates/ddash/graph_cpu_load_5min.j2
@@ -25,7 +25,7 @@
       "groupBy": [
         {
           "params": [
-            "$interval"
+            "$discovery_interval"
           ],
           "type": "time"
         },
