--- a/templates/ddash/graph_environment_temperature.j2
+++ b/templates/ddash/graph_environment_temperature.j2
@@ -22,7 +22,7 @@
         {
           "type": "time",
           "params": [
-            "$interval"
+            "$discovery_interval"
           ]
         },
         {
