--- a/templates/ddash/graph_radio_cinr.j2
+++ b/templates/ddash/graph_radio_cinr.j2
@@ -41,7 +41,7 @@
       "groupBy": [
         {
           "params": [
-            "$interval"
+            "$discovery_interval"
           ],
           "type": "time"
         },
