--- a/templates/ddash/graph_subscribers_ppp.j2
+++ b/templates/ddash/graph_subscribers_ppp.j2
@@ -22,7 +22,7 @@
         {
           "type": "time",
           "params": [
-            "$interval"
+            "$discovery_interval"
           ]
         },
         {
