move supervisorsock away from noc var
--HG--
branch : feature/microservices

--- a/ansible/roles/node/templates/etc/config/supervisor/supervisorctl.conf.j2
+++ b/ansible/roles/node/templates/etc/config/supervisor/supervisorctl.conf.j2
@@ -1,4 +1,4 @@
 [supervisorctl]
-serverurl = unix://{{ noc_root }}/var/sock/supervisor.sock
+serverurl = unix://{{ supervisor_sock_path}}
 username = {{ noc_user }}
 password = {{supervisorctl_key}}
