Add fix environment temperature dash for slot
--HG--
branch : feature/microservices

--- a/templates/ddash/graph_environment_temperature.j2
+++ b/templates/ddash/graph_environment_temperature.j2
@@ -26,6 +26,12 @@
           ]
         },
         {
+          "type": "tag",
+          "params": [
+            "slot"
+          ]
+        },
+        {
           "type": "fill",
           "params": [
             "null"
@@ -47,7 +53,7 @@
         ]
       ],
       "refId": "A",
-      "measurement": "{{graph}}",
+      "measurement": "{{graph}} on slot $tag_slot",
       "alias": "{{graph}}"
     }
   ],
