Fix environment temperature dash
--HG--
branch : feature/microservices

--- a/templates/ddash/graph_environment_temperature.j2
+++ b/templates/ddash/graph_environment_temperature.j2
@@ -53,8 +53,8 @@
         ]
       ],
       "refId": "A",
-      "measurement": "{{graph}} on slot $tag_slot",
-      "alias": "{{graph}}"
+      "measurement": "{{graph}}",
+      "alias": "{{graph}} on slot $tag_slot"
     }
   ],
   "datasource": null,
