--- a/ansible/roles/nsqd/templates/os/FreeBSD/etc/rc.d/nsqd.j2
+++ b/ansible/roles/nsqd/templates/os/FreeBSD/etc/rc.d/nsqd.j2
@@ -8,7 +8,7 @@
 # Add the following lines to /etc/rc.conf.local or /etc/rc.conf to
 # enable nsqd:
 #
-# nsqd_enable (bool): Set to NO by default. 
+# nsqd_enable (bool): Set to NO by default.
 #                     Set it to YES to enable nsqd
 #
 
@@ -20,7 +20,7 @@ rcvar=nsqd_enable
 load_rc_config $name
 
 : ${nsqd_enable="NO"}
-: ${nsqd_config="{{ noc_root }}/var/etc/nsq/${name}.conf"}
+: ${nsqd_config="{{nsqd_config_dir}}/${name}.conf"}
 
 command="{{ noc_root }}/bin/${name}"
 required_files="${nsqd_config}"
