--- a/ansible/roles/node/templates/os/FreeBSD/etc/rc.d/noc.j2
+++ b/ansible/roles/node/templates/os/FreeBSD/etc/rc.d/noc.j2
@@ -21,7 +21,7 @@ rcvar=`set_rcvar`
 load_rc_config $name
 
 : ${noc_enable="NO"}
-: ${noc_config="{{ noc_root }}/etc/supervisord.conf"}
+: ${noc_config="{{ noc_etc }}/supervisord.conf"}
 : ${noc_flags="-c ${noc_config}"}
 
 export PATH=$PATH:/usr/local/bin
