--- a/ansible/roles/node/templates/os/CentOS/etc/systemd/system/noc.service.j2
+++ b/ansible/roles/node/templates/os/CentOS/etc/systemd/system/noc.service.j2
@@ -5,7 +5,7 @@ After=network.target
 
 [Service]
 Type=forking
-ExecStart={{ noc_root }}/bin/supervisord -c {{ noc_root }}/etc/supervisord.conf
+ExecStart={{ noc_root }}/bin/supervisord -c {{ noc_etc }}/supervisord.conf
 ExecReload={{ noc_root }}/bin/supervisorctl serialrestart all
 Restart=on-failure
 ExecStop={{ noc_root }}/bin/supervisorctl shutdown
