--- a/ansible/roles/mongod/templates/mongod-arbiter.conf.j2
+++ b/ansible/roles/mongod/templates/mongod-arbiter.conf.j2
@@ -6,7 +6,7 @@ storage:
   journal:
     enabled: false
   engine: {{ noc_mongo_storageengine }}
-     
+
 systemLog:
   verbosity: 0
   destination: file
@@ -22,7 +22,7 @@ processManagement:
   pidFilePath: {{ mongo_arbiter_pid }}
 
 security:
-  keyFile: {{ noc_root }}/var/etc/mongo/mongo.key
+  keyFile: {{ mongo_dir }}/mongo.key
   clusterAuthMode: keyFile
   authorization: enabled
 
