--- a/ansible/roles/mongod/templates/mongod.conf.j2
+++ b/ansible/roles/mongod/templates/mongod.conf.j2
@@ -25,7 +25,7 @@ processManagement:
   pidFilePath: {{ mongo_pid }}
 
 security:
-  keyFile: {{ noc_root }}/var/etc/mongo/mongo.key
+  keyFile: {{ mongo_dir }}/mongo.key
   clusterAuthMode: keyFile
   authorization: enabled
 
