--- a/ansible/roles/mongod/templates/os/Ubuntu/etc/systemd/system/mongod-arbiter.service.j2
+++ b/ansible/roles/mongod/templates/os/Ubuntu/etc/systemd/system/mongod-arbiter.service.j2
@@ -17,7 +17,7 @@ TasksAccounting=false
 User={{ mongo_user }}
 Group={{ mongo_user }}
 PIDFile={{ mongo_arbiter_pid }}
-Environment="OPTIONS= -f {{ noc_root }}/var/etc/mongo/mongod-arbiter.conf"
+Environment="OPTIONS= -f {{ mongo_dir }}/mongod-arbiter.conf"
 PermissionsStartOnly=true
 ExecStartPre=/bin/touch {{ mongo_arbiter_pid }}
 ExecStartPre=/bin/chown {{ mongo_user }}:{{ mongo_user }} {{ mongo_arbiter_pid }}
