fix most useless role in that play
--HG--
branch : feature/microservices

--- a/ansible/roles/notebook/templates/etc/jupyter/jupyter_notebook_config.py.j2
+++ b/ansible/roles/notebook/templates/etc/jupyter/jupyter_notebook_config.py.j2
@@ -138,7 +138,7 @@ c.NotebookApp.base_url = u'/notebook/'
 c.NotebookApp.tornado_settings = {'static_url_prefix': u'/notebook/static/'}
 
 # The directory to use for notebooks and kernels.
-c.NotebookApp.notebook_dir = u'{{ noc_root }}/var/notebooks'
+c.NotebookApp.notebook_dir = u'{{ noc_var }}/notebooks'
 
 # The kernel manager class to use.
 # c.NotebookApp.kernel_manager_class = <class 'notebook.services.kernels.kernelmanager.MappingKernelManager'>
