--- a/ansible/roles/nginx/templates/etc/nginx/conf.d/noc.conf.j2
+++ b/ansible/roles/nginx/templates/etc/nginx/conf.d/noc.conf.j2
@@ -11,7 +11,11 @@ http {
 {% if noc_config["services"].get("web", []) %}
 upstream noc-web {
 {% for n in noc_config["services"].get("web", []) %}
-    server {{ n }} weight={{web_weight}};
+    {% if n.split(":")[0] in ansible_all_ipv4_addresses %}
+    server {{ n }} weight={{web_weight}}  max_fails=3 fail_timeout=10;
+    {% else %}
+    server {{ n }} weight={{web_weight | int + 10}}  max_fails=3 fail_timeout=10 backup;
+    {% endif %}
 {% endfor %}
 }
 {% endif %}
@@ -19,7 +23,11 @@ upstream noc-web {
 {% if noc_config["services"].get("login", []) %}
 upstream login {
 {% for n in noc_config["services"].get("login", []) %}
-    server {{ n }} weight={{login_weight}};
+    {% if n.split(":")[0] in ansible_all_ipv4_addresses %}
+    server {{ n }} weight={{login_weight}}  max_fails=3 fail_timeout=10;
+    {% else %}
+    server {{ n }} weight={{login_weight | int + 10}}  max_fails=3 fail_timeout=10 backup;
+    {% endif %}
 {% endfor %}
 }
 {% endif %}
@@ -27,7 +35,11 @@ upstream login {
 {% if noc_config["services"].get("card", []) %}
 upstream card {
 {% for n in noc_config["services"].get("card", []) %}
-    server {{ n }} weight={{card_weight}};
+    {% if n.split(":")[0] in ansible_all_ipv4_addresses %}
+    server {{ n }} weight={{card_weight}}  max_fails=3 fail_timeout=10;
+    {% else %}
+    server {{ n }} weight={{card_weight | int + 10 }}  max_fails=3 fail_timeout=10 backup;
+    {% endif %}
 {% endfor %}
 }
 {% endif %}
@@ -59,7 +71,11 @@ upstream notebook {
 {% if noc_config["services"].get("grafana", []) %}
 upstream grafana {
 {% for n in noc_config["services"].get("grafana", []) %}
-    server {{ n }} weight={{grafana_weight}};
+    {% if n.split(":")[0] in ansible_all_ipv4_addresses %}
+    server {{ n }} weight={{grafana_weight}}  max_fails=3 fail_timeout=10;
+    {% else %}
+    server {{ n }} weight={{grafana_weight | int + 10 }}  max_fails=3 fail_timeout=10;
+    {% endif %}
 {% endfor %}
 }
 {% endif %}
@@ -67,7 +83,11 @@ upstream grafana {
 {% if noc_config["services"].get("grafanads", []) %}
 upstream grafanads {
 {% for n in noc_config["services"].get("grafanads", []) %}
-    server {{ n }} weight={{grafanads_weight}} max_conns=1;
+    {% if n.split(":")[0] in ansible_all_ipv4_addresses %}
+    server {{ n }} weight={{grafana_weight}}  max_fails=3 fail_timeout=10;
+    {% else %}
+    server {{ n }} weight={{grafanads_weight | int + 10 }}  max_fails=3 fail_timeout=10 backup;
+    {% endif %}
 {% endfor %}
 }
 {% endif %}
