use new port for notebook for nginx upstream
--HG--
branch : feature/microservices

--- a/ansible/roles/nginx/templates/upstream.conf.j2
+++ b/ansible/roles/nginx/templates/upstream.conf.j2
@@ -53,7 +53,7 @@ upstream bi {
 {% if noc_config["services"].get("notebook", []) %}
 upstream notebook {
 {% for n in noc_config["services"].get("notebook", []) %}
-    server {{ n }};
+    server {{ n[:-6] }}:{{ notebook_port }};
 {% endfor %}
 }
 {% endif %}
