use ansible_host instead of ansible_nodename
--HG--
branch : feature/microservices

--- a/ansible/roles/notebook/templates/notebook.json.j2
+++ b/ansible/roles/notebook/templates/notebook.json.j2
@@ -5,7 +5,7 @@
     "port": {{notebook_port}},
     "enableTagOverride": false,
     "check": {
-        "http": "http://{{ hostvars[inventory_hostname].ansible_nodename }}:{{ notebook_port }}/notebook/login",
+        "http": "http://{{ hostvars[inventory_hostname].ansible_host }}:{{ notebook_port }}/notebook/login",
         "interval": "60s"
     }
   }
