--- a/ansible/roles/postgres/templates/postgres_check.sh.j2
+++ b/ansible/roles/postgres/templates/postgres_check.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/sh
-isok=$(timeout 1 {{ postgres_bin_dir }}/psql -U {{ noc_pg_user }} --host {{ ansible_nodename }} -qAt0 --port 5432 {{ noc_pg_db }} -c "select pg_is_in_recovery()::int")
+isok=$(timeout 1 {{ postgres_bin_dir }}/psql -U {{ noc_pg_user }} --host {{ ansible_host }} -qAt0 --port 5432 {{ noc_pg_db }} -c "select pg_is_in_recovery()::int")
 if [ "$isok" == "0" ]
 then
     exit 0
