--- a/ansible/roles/pre/templates/hosts.j2
+++ b/ansible/roles/pre/templates/hosts.j2
@@ -11,5 +11,5 @@ ff02::2     ip6-allrouters
 127.0.0.1 consul
 # Network nodes as generated through Ansible.
 {% for host in play_hosts %}
-{{ hostvars[host].ansible_default_ipv4.address }} {{hostvars[ansible_nodename].ansible_nodename}}
+{{ hostvars[host].ansible_host }} {{hostvars[ansible_nodename].ansible_nodename}}
 {% endfor %}
