remove noc_config["services"] dependency from influxdb role
--HG--
branch : feature/microservices

--- a/ansible/roles/influxdb/templates/etc/influxdb/influxdb.conf.j2
+++ b/ansible/roles/influxdb/templates/etc/influxdb/influxdb.conf.j2
@@ -64,7 +64,7 @@ reporting-disabled = true
 
 [http]
   enabled = true
-  bind-address = ":8086"
+  bind-address = ":{{ influxdb_port }}"
   auth-enabled = false
   log-enabled = false
   write-tracing = false
