--- a/ansible/roles/grafana/templates/report.js.j2
+++ b/ansible/roles/grafana/templates/report.js.j2
@@ -411,9 +411,174 @@ for (var i = 'cpu'; i == title; i++) {
                         ],
 
                         seriesOverrides: [
+                            {}
+                        ],
+                        tooltip: {
+                            shared: true
+                        }
+                    }
+                ]
+            }
+        )
+    dashboard.time = {
+        from: "" + f_d + "",
+        to: "" + t_d + ""
+    };
+    ;
+}
+
+for (var i = 'ping'; i == title; i++) {
+
+    dashboard.templating = {
+        enable: true,
+        list: [
+            {
+                "allValue": null,
+                "current": {
+                    "text": "" + obj + "",
+                    "value": "" + obj + ""
+                },
+                "hide": 0,
+                "includeAll": false,
+                "label": null,
+                "multi": false,
+                "name": "object",
+                "options": [
+                    {
+                        "selected": false,
+                        "text": "null",
+                        "value": "null"
+                    }
+                ],
+                "query": "null",
+                "type": "custom"
+            },
+
+        ]
+    },
+
+        dashboard.rows.push({
+                title: 'Chart',
+                height: '300px',
+                panels: [
+                    {
+                        title: "" + title + "",
+                        type: 'graph',
+                        aliasColors: {},
+                        bars: false,
+                        dashLength: 10,
+                        dashes: false,
+                        fill: 1,
+                        hideTimeOverride: false,
+                        id: 1,
+                        legend: {
+                            alignAsTable: true,
+                            avg: true,
+                            current: true,
+                            hideEmpty: false,
+                            hideZero: false,
+                            max: true,
+                            min: true,
+                            rightSide: false,
+                            show: true,
+                            total: false,
+                            values: true
+                        },
+                        lines: true,
+                        linewidth: 2,
+                        links: [],
+                        nullPointMode: null,
+                        percentage: false,
+                        pointradius: 5,
+                        points: false,
+                        renderer: "flot",
+                        repeat: null,
+                        seriesOverrides: [],
+                        spaceLength: 10,
+                        span: 12,
+                        stack: false,
+                        steppedLine: false,
+                        targets: [
                             {
-                                alias: "In",
-                                transform: "negative-Y",
+                                "alias": "Ping | RTT",
+                                "dsType": "influxdb",
+                                "groupBy": [],
+                                "measurement": "Ping | RTT",
+                                "orderByTime": "ASC",
+                                "policy": "default",
+                                "refId": "A",
+                                "resultFormat": "time_series",
+                                "select": [
+                                    [
+                                        {
+                                            "params": [
+                                                "value"
+                                            ],
+                                            "type": "field"
+                                        }
+                                    ]
+                                ],
+                                "tags": [
+                                    {
+                                        "key": "object",
+                                        "operator": "=~",
+                                        "value": "/^$object$/"
+                                    }
+                                ]
+                            },
+                            {
+                                "alias": "Ping | Attempts",
+                                "dsType": "influxdb",
+                                "groupBy": [],
+                                "measurement": "Ping | Attempts",
+                                "orderByTime": "ASC",
+                                "policy": "default",
+                                "refId": "B",
+                                "resultFormat": "time_series",
+                                "select": [
+                                    [
+                                        {
+                                            "params": [
+                                                "value"
+                                            ],
+                                            "type": "field"
+                                        }
+                                    ]
+                                ],
+                                "tags": [
+                                    {
+                                        "key": "object",
+                                        "operator": "=~",
+                                        "value": "/^$object$/"
+                                    }
+                                ]
+
+
+                            }
+                        ],
+                        "yaxes": [
+                            {
+                                "format": "s",
+                                "label": "ms",
+                                "logBase": 1,
+                                "max": null,
+                                "min": null,
+                                "show": true
+                            },
+                            {
+                                "format": "decbytes",
+                                "label": null,
+                                "logBase": 1,
+                                "max": null,
+                                "min": null,
+                                "show": false
+                            }
+                        ],
+
+                        seriesOverrides: [
+                            {
+                                alias: "Ping | Attempts",
+                                color: "#BF1B00",
                                 fill: 1,
                                 linewidth: 2
                             }
@@ -683,12 +848,7 @@ for (var i = 'error'; i == title; i++) {
                         ],
 
                         seriesOverrides: [
-                            {
-                                alias: "In",
-                                transform: "negative-Y",
-                                fill: 1,
-                                linewidth: 2
-                            }
+                            {}
                         ],
                         tooltip: {
                             shared: true
