always use local influxdb for monitoring
--HG--
branch : feature/microservices

--- a/ansible/roles/influxdb/templates/etc/telegraf/telegraf.d/influxdb.conf.j2
+++ b/ansible/roles/influxdb/templates/etc/telegraf/telegraf.d/influxdb.conf.j2
@@ -5,7 +5,7 @@
 
   ## Multiple URLs from which to read InfluxDB-formatted JSON
   urls = [
-    "http://{{influx_host}}:{{ influxdb_port }}/debug/vars"
+    "http://127.0.0.1:{{ influxdb_port }}/debug/vars"
   ]
 
 
