refactor ansible_hostname -> ansible_nodename to avoid first install name collision
--HG--
branch : feature/microservices

--- a/ansible/roles/keepalived/templates/keepalived.conf.j2
+++ b/ansible/roles/keepalived/templates/keepalived.conf.j2
@@ -1,7 +1,7 @@
 ! Configuration File for keepalived
 
 global_defs {
-   router_id {{ ansible_hostname }}
+   router_id {{ ansible_nodename }}
 }
 
 {% if groups['svc-nginx'] | count  > 1 %}
