--- a/ansible/roles/influxdb/templates/etc/influxdb/influxdb.conf.j2
+++ b/ansible/roles/influxdb/templates/etc/influxdb/influxdb.conf.j2
@@ -4,7 +4,7 @@ reporting-disabled = true
 
 [meta]
   dir = "{{ influxdb_db_path_meta }}"
-  hostname = "{{ ansible_hostname }}"
+  hostname = "{{ ansible_nodename }}"
   bind-address = ":8088"
   retention-autocreate = true
   logging-enabled = true
