--- a/ansible/roles/nsqd/templates/etc/telegraf/telegraf.d/nsqd.conf.j2
+++ b/ansible/roles/nsqd/templates/etc/telegraf/telegraf.d/nsqd.conf.j2
@@ -3,5 +3,5 @@ pattern = "nsqd"
 
 [[inputs.nsq]]
   ## An array of NSQD HTTP API endpoints
-  endpoints = ["http://{{ansible_hostname}}:4151"]
+  endpoints = ["http://{{ansible_nodename}}:4151"]
   tagexclude = ["client_deflate","client_address","client_hostname","client_name","client_snappy","client_tls","client_user_agent","client_version","server_version"]
