--- a/ansible/roles/consul/templates/consul_bsdinit.j2
+++ b/ansible/roles/consul/templates/consul_bsdinit.j2
@@ -4,32 +4,26 @@
 # REQUIRE: LOGIN
 # KEYWORD: shutdown
 
-# shellcheck disable=SC1091
 . /etc/rc.subr
 
 name="consul"
-# shellcheck disable=2034
 rcvar=$(set_rcvar)
 
-
 load_rc_config $name
-# shellcheck disable=2154
 : "${consul_enable="NO"}"
-# shellcheck disable=2154
 : "${consul_users="consul"}"
 
-# shellcheck disable=2034
 restart_cmd=consul_restart
-# shellcheck disable=2034
 start_cmd=consul_start
-# shellcheck disable=2034
 stop_cmd=consul_stop
 
 consul_start() {
     echo "Starting ${name}."
     for user in ${consul_users}; do
-        mkdir /var/run/consul
-        chown -R "{{ consul_user }}:{{ consul_group }}" /var/run/consul/
+        if [ ! -d /var/run/consul/ ]; then
+            mkdir /var/run/consul
+        fi
+        chown -R "${user}:{{ consul_group }}" /var/run/consul/
         su -m "${user}" -c "{{ consul_bin_path }}/consul agent -config-file={{ consul_config_path }}/config.json -config-dir={{ consul_configd_path }} -pid-file=/var/run/consul/consul.pid&"
     done
 }
