--- a/ansible/roles/mongod/templates/mongodb.sh.j2
+++ b/ansible/roles/mongod/templates/mongodb.sh.j2
@@ -1,5 +1,5 @@
-#!/bin/bash
-ISMASTER=$(/usr/bin/mongo --quiet --eval 'db.isMaster().ismaster')
+#!/bin/sh
+ISMASTER=$({{ mongo_path }} --quiet --eval 'db.isMaster().ismaster')
 if [ "$ISMASTER" = "true" ]
 then
     exit 0
