fix Subscribers on slots graph
--HG--
branch : feature/microservices

--- a/templates/ddash/graph_subscribers_summary.j2
+++ b/templates/ddash/graph_subscribers_summary.j2
@@ -14,7 +14,7 @@
         {
           "key": "object",
           "operator": "=",
-          "value": "bng1a.mo"
+          "value": "$device"
         }
       ],
       "refId": "B",
@@ -58,7 +58,7 @@
         {
           "key": "object",
           "operator": "=",
-          "value": "bng1a.mo"
+          "value": "$device"
         }
       ],
       "refId": "A",
