--- a/sa/templates/interfaces/igetchassisid.html
+++ b/sa/templates/interfaces/igetchassisid.html
@@ -4,7 +4,7 @@
 <table border="0">
     <tr><td><b>Object</b></td><td>{{object.name}}</td></tr>
     <tr><td><b>Address</b></td><td>{{object.address}}</td></tr>
-    <tr><td><b>Profile</b></td><td>{{object.profile_name}}</td></tr>
+    <tr><td><b>Profile</b></td><td>{{object.profile.name}}</td></tr>
     <tr>
         <td><b>Chassis ID MAC</b></td>
         <td>
