--- a/sa/templates/interfaces/igetversion.html
+++ b/sa/templates/interfaces/igetversion.html
@@ -4,7 +4,7 @@
 <table border="0">
     <tr><td><b>Object</b></td><td>{{object.name}}</td></tr>
     <tr><td><b>Address</b></td><td>{{object.address}}</td></tr>
-    <tr><td><b>Profile</b></td><td>{{object.profile_name}}</td></tr>
+    <tr><td><b>Profile</b></td><td>{{object.profile.name}}</td></tr>
     <tr><td><b>Vendor</b></td><td>{{result.vendor}}</td></tr>
     <tr><td><b>Platform</b></td><td>{{result.platform}}</td></tr>
     <tr><td><b>Version</b></td><td>{{result.version}}</td></tr>
