Use profile reference
--HG--
branch : feature/moversion

--- a/templates/object/new.html
+++ b/templates/object/new.html
@@ -9,4 +9,4 @@ Subject: New managed object: {{ object.name }}
 New managed object just has been created.
 Name: {{ object.name }}
 Address: {{ object.address }}
-Profile: {{ object.profile_name }}
+Profile: {{ object.profile.name }}
