fix consul checks
--HG--
branch : feature/config

--- a/ansible/roles/mongod/templates/mongodb.sh.j2
+++ b/ansible/roles/mongod/templates/mongodb.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/sh
 ISMASTER=$({{ mongo_path }} --quiet --eval 'db.isMaster().ismaster')
-if [ "$ISMASTER" == "true" ]
+if [ "$ISMASTER" = "true" ]
 then
     exit 0
 else
