move from inventory_hostname to ansible_nodename
--HG--
branch : feature/config

--- a/ansible/roles/notebook/templates/etc/jupyter/jupyter_notebook_config.py.j2
+++ b/ansible/roles/notebook/templates/etc/jupyter/jupyter_notebook_config.py.j2
@@ -65,7 +65,7 @@ c.JupyterApp.answer_yes = True
 # c.NotebookApp.jinja_environment_options = traitlets.Undefined
 
 # The IP address the notebook server will listen on.
-c.NotebookApp.ip = '{{ hostvars[inventory_hostname].ansible_host }}'
+c.NotebookApp.ip = '{{ hostvars[ansible_nodename].ansible_host }}'
 
 # DEPRECATED use base_url
 # c.NotebookApp.base_project_url = '/'
