--- a/ansible/roles/node/templates/etc/supervisord.conf.j2
+++ b/ansible/roles/node/templates/etc/supervisord.conf.j2
@@ -8,7 +8,7 @@ supervisor.ctl_factory = supervisorserialrestart.controllerplugin:make_serialres
 serverurl = unix://{{ supervisor_sock_path }}
 username = {{ noc_user }}
 password = {{ supervisorctl_key }}
-prompt={{ noc_user }}@{{ noc_env }}/{{ noc_dc }}/{{ inventory_hostname }}
+prompt={{ noc_user }}@{{ noc_env }}/{{ noc_dc }}/{{ ansible_nodename }}
 
 [supervisord]
 directory = {{ noc_root }}
@@ -21,8 +21,8 @@ nodaemon = false
 minfds = 1024
 minprocs = 200
 umask = 022
-identifier = {{ noc_env }}-{{ noc_dc }}-{{ inventory_hostname }}
-environment = NOC_DC="{{ noc_dc }}",NOC_NODE="{{ inventory_hostname }}",NOC_USER="{{ noc_user }}",NOC_ROOT="{{ noc_root }}",NOC_ENV="{{ noc_env }}"
+identifier = {{ noc_env }}-{{ noc_dc }}-{{ ansible_nodename }}
+environment = NOC_DC="{{ noc_dc }}",NOC_NODE="{{ ansible_nodename }}",NOC_USER="{{ noc_user }}",NOC_ROOT="{{ noc_root }}",NOC_ENV="{{ noc_env }}"
 
 [unix_http_server]
 file = {{ supervisor_sock_path}}
