--- a/ansible/roles/consul-template/templates/consul-template.cfg.j2
+++ b/ansible/roles/consul-template/templates/consul-template.cfg.j2
@@ -1,4 +1,6 @@
-consul = "{{ consul_template_consul_server }}:{{ consul_template_consul_port }}"
+consul = {
+    address = "{{ consul_template_consul_server }}:{{ consul_template_consul_port }}"
+}
 {% if consul_template_log_level -%}
     log_level = "{{consul_template_log_level}}"
 {% endif %}
@@ -6,6 +8,3 @@ consul = "{{ consul_template_consul_server }}:{{ consul_template_consul_port }}"
 {% if consul_template_wait is defined %}
 wait = "{{consul_template_wait}}"
 {% endif %}
-
-
-
