--- a/ansible/roles/consul-template/templates/services/noc_bi.conf.j2
+++ b/ansible/roles/consul-template/templates/services/noc_bi.conf.j2
@@ -1,6 +1,6 @@
 template {
   source = "{{ consul_template_templates_dir }}/noc_bi.ctmpl"
-  destination = "{{ telegraf_confd_path }}/noc_bi.conf"
+  destination = "{{ telegraf_confd_path }}/noc-bi.conf"
   command = "{{ telegraf_reload_command }}"
   command_timeout = "60s"
   perms = 0644
